--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5472,7 +5472,8 @@
   date = {2022},
   publisher = {{National Ecological Observatory Network (NEON)}},
   doi = {10.48443/77N6-EH42},
-  url = {https://data.neonscience.org/data-products/DP1.00001.001/RELEASE-2022},
+  url = {https://data.neonscience.org/data-products/DP1.00001.001},
+  urldate = {2022-09-01},
   langid = {english},
   keywords = {horizontal wind,met station,meteorological station,sonic anemometer,tower,wind direction,wind speed}
 }
@@ -5516,7 +5517,7 @@
   date = {2022},
   publisher = {{National Ecological Observatory Network (NEON)}},
   doi = {10.48443/W9NF-K476},
-  url = {https://data.neonscience.org/data-products/DP1.00098.001/RELEASE-2022},
+  url = {https://data.neonscience.org/data-products/DP1.00098.001},
   langid = {english},
   keywords = {air temperature,dew point,frost point,humidity,meteorological station,relative humidity,soil array,temperature,tower top,water content}
 }
@@ -10892,16 +10893,6 @@
   keywords = {biomass,climate gradients,forests,tree size distribution,woody mortality,woody productivity},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17995},
   file = {/Users/nidhivinod/Zotero/storage/7CU6JY5R/Piponiot et al. - 2022 - Distribution of biomass dynamics in relation to tr.pdf}
-}
-
-@article{piponiotDistributionBiomassDynamicsinpress,
-  title = {Distribution of Biomass Dynamics in Relation to Tree Size in Forests across the World.},
-  author = {Piponiot, Camille and Anderson-Teixeira KJ and Davies, SJ and Allen D, Bourg NA, Burslem and {DFRP, Cárdenas D, Chang-Yang C-H, Chuyong G, Cordell S, Dattaraja HS,} and {Duque Á, Ediriweera S, Ewango C, Ezedin Z, Filip J, Giardina C, Howe R,} and {Hsieh, C-F, Hubbell S, Inman-Narahari FM, Itoh A, Janik D, Kenfack D,} and {Kral K, Lutz JA, Makana J-R, McMahon S, McShea W, Mi X, Mohamad M,} and {Novotny V, O’Brien MJ, Ostertag R, Parker G, Pérez R, Ren H-B, Reynolds} and {G, Sabri MDM, Sack L, Shringi A, Su S-H, Sukumar R, Sun I-F, Suresh HS,} and {Thomas DW, Thompson J, Uriarte M, Vandermeer J, Wang Y, Ware IM, Weiblen} and {GD, Whitfeld TJS, Wolf Amy, Yao TL, Yu M, Yuan Z, Zimmerman JK, Zuleta} and {D, Muller-Landau HC. 2022.}},
-  year = {in press},
-  journaltitle = {New Phytologist},
-  url = {https://mail.google.com/mail/u/0/#inbox/FMfcgzGmvBjsQxLncXTSPTBhpZrWzdGg?projector=1&messagePartId=0.1},
-  urldate = {2022-02-17},
-  file = {/Users/nidhivinod/Zotero/storage/I55JETLA/FW Urgent - New Phytologist article proof - Check.pdf}
 }
 
 @article{piponiotSizerelatedTreeBiomassinreview,
