--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -300,7 +300,7 @@ Table `r table_leaf_traits`, cont.
 
 *Responses across height and light gradients are summarized, with up and down arrows indicating significant increasing or decreasing trends, respectively, in response to height (H) or light (L). $\approx$ indicates lack of any notable directional variation, and $\approx \uparrow$ or $\approx \downarrow$ indicate non-significant or mixed trends (e.g., significant in some but not all species studied). 
 
-$\dagger$ Forest types are coded as follows: TrB = tropical broadleaf; TeB = temperate broadleaf; TeN = temperate needleleaf (conifer); BoN= boreal needleleaf (conifer).
+$\dagger$ Forest types are coded as follows: TrB = tropical broadleaf; TeB = temperate broadleaf; TeN = temperate needleleaf (conifer); BoN= boreal needleleaf (conifer); TrS = tropical savanna.
 
 <!--refs in this table are in the nocite field at top of document-->
 $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 4. Chin and Sillett 2019; 5. Wyka et al. 2012; 6. Atherton et al. 2017; 7. Kenzo et al. 2015; 8. Kusi and Karasi 2020; 9. Dang et al. 1997; 10. Gebauer et al. 2015; 11. Marenco et al. 2017; 12. Kafuti et al. 2020; 13. Van Wittenberghe et al. 2012; 14. Zhang et al. 2019; 15. Weerasinghe et al. 2014; 16. Oldham et al. 2010; 17. Ichie et al. 2016; 18. Gregoriou et al. 2007; 19. Levizou et al. 2005; 20. Liakoura 1997; 21. Fauset et al. 2018; 22. Niinemets et al. 1998, 23. Ishida et al. 1998; 24. Millen and Clendon 1979; 25. Smith and Carter, 1988; 26. Hadley and Smith 1987; 28. Baltzer and Thomas 2005; 29. Coble et al. 2016; 30. Scartazza et al. 2016; 31. Duursma and Marshall, 2006; 32. Harley et al. 1996;  33. Hernandez et al. 2020; 34. Turnbull et al. 2003; 35. Chen et al. 2020; 36. van de Weg et al. 2012; 37. M.A Cavaleri et al. 2008;  38. Koniger et al. 1995; 39. Mastubara et al. 2009; 40. Harris and Medina 2013; 41. Hansen et al. 2001; 42. Poorter et al. 1995; 43. Coble et al. 2016; 44. Niinemets et al. 2004; 45. Poorter et al. 2000; 46. Zwieniecki et al. 2004; 47. Sack and Scoffoni, 2013; 48. Ball et al., 1988; 49. Taylor et al. 2021; 50. Niinemets et al. 2010; 51. Brooks et al. 1997; 52. Curtis et al. 2019; 53. Slot et al. 2019; 54. Hamerlynck and Knapp 1994; 55. Lloyd et al. 2010; 56. Augspurger and Bartlett, 2003; 57. Osada et al. 2001; 58. Meakem et al. 2018; 59. Condit et al. 2000; 60. Harley et al. 1997; 61. Niinemets and Sun, 2014; 62. Sharkey and Monson, 2014; 63. Simpraga et al. 2013; 64. Domingues et al. 2005
@@ -415,7 +415,7 @@ Table `r table_leaf_metabolism`, cont.
 
 *Responses across height and light gradients are summarized, with up and down arrows indicating significant increasing or decreasing trends, respectively, in response to height (H) or light (L). $\approx$ indicates lack of any notable directional variation, and $\approx \uparrow$ or $\approx \downarrow$ indicate non-significant or mixed trends (e.g., significant in some but not all species studied). 
 
-$\dagger$ Forest types are coded as follows: TrB = tropical broadleaf; TeB = temperate broadleaf; TeN = temperate needleleaf (conifer); BoN= boreal needleleaf (conifer).
+$\dagger$ Forest types are coded as follows: TrB = tropical broadleaf; TeB = temperate broadleaf; TeN = temperate needleleaf (conifer); BoN = boreal needleleaf (conifer).
 
 <!--refs in this table are in the nocite field at top of document-->
 $\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et al. 1990; 4. Dang et al. 1997; 5. Marenco et al. 2017; 6. Ambrose et al. 2015; 7. Zweifel et al. 2001; 8. Slot et al. 2019; 9. Hernandez et al. 2020; 10. Urban et al. 2007; 11. Carter and Cavaleri 2018; 12. Martin et al. 1999; 13. Mau et al. 2018;  14. Kosugi et al. 2012; 15. Niinemets et al. 2015; 16. Bachofen et al. 2020; 17. Hamerlynck and Knapp 1994; 18. Coble et al. 2017; 19. Wyka et al. 2012; 20. Rijkerse et al. 2000; 21. Ishida et al. 1999; 22. Weerasinghe et al. 2014; 23. Scartazza et al. 2016; 24. Miller et al. 2021; 25. Harris and Medina 2013; 26. Legner et al. 2014; 27. Kitao et al. 2012; 28. Fauset et al. 2018; 29. Rey-Sanchez et al. 2016; 30. Muller et al. 2021; 31. Mier et al. 2001; 32. Turnbull et al. 2003; 33. Araki et al. 2017; 34. Bolstad et al. 1999; 35. Kenzo et al. 2015; 36. Harley et al. 1996; 37. Xu and Griffin 2006; 38. Atherton et al. 2017; 39. Carter et al. 2021; 40. Sack et al. 2003; 41. Slot et al. 2021; 42. Carswell et al. 2000
@@ -509,9 +509,9 @@ Canopy trees account for the majority of forest ecosystem water and carbon cycli
 While studies partitioning transpiration across forest vertical gradients are rare, both evapo-transpiration (ET) and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, where the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. 
 Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed ~93% of ET, or 88% of transpiration [Fig `r fig_ecosystem`a, @kunertRevisedHydrologicalModel2017], and trees >33 cm DBH contributed >80% of transpiration in a forest in Costa Rica [@mooreUpscalingTranspirationDiverse2018]. 
 In terms of C cycling, it has been estimated that the canopy strata contributes ≥64% of net daytime CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil, @missonPartitioningForestCarbon2007]. 
-Large trees also dominate woody aboveground net primary productivity (*ANPP~woody~*) and mortality (*M~woody~*), with trees ≥10cm DBH usually contributing > 85% of *ANPP~woody~* and *M~woody~* across 25 globally distributed forests [Fig. `r fig_ecosystem`b, @piponiotDistributionBiomassDynamicsinpress]. 
+Large trees also dominate woody aboveground net primary productivity (*ANPP~woody~*) and mortality (*M~woody~*), with trees ≥10cm DBH usually contributing > 85% of *ANPP~woody~* and *M~woody~* across 25 globally distributed forests [Fig. `r fig_ecosystem`b, @piponiotDistributionBiomassDynamics2022]. 
 
-![**Figure `r fig_ecosystem`. Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests.** Panel (a) is from @kunertRevisedHydrologicalModel2017; panel (b) presents averages for 14 tropical forests from @piponiotDistributionBiomassDynamicsinpress.](schematics/ecosystem vertical partitioning/ecosystem partitioning.png)
+![**Figure `r fig_ecosystem`. Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests.** Panel (a) is from @kunertRevisedHydrologicalModel2017; panel (b) presents averages for 14 tropical forests from @piponiotDistributionBiomassDynamics2022.](schematics/ecosystem vertical partitioning/ecosystem partitioning.png)
 
 It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but probable responses can be inferred based on the patterns and mechanisms reviewed above.
 We expect that under conditions of moderate to high VPD, transpiration, GPP, and *ANPP~woody~* should all be more sensitive to high temperatures in the upper canopy than in the understory [@grossiordPlantResponsesRising2020; @nunesForestFragmentationImpacts2022]. 
