--- a/response-to-editorial-requests.Rmd
+++ b/response-to-editorial-requests.Rmd
@@ -87,6 +87,8 @@ f) References:
 
 •       Slot et al. (2021b): if the information is available, update the article identifier with the volume number and page range.
 
+**Done**
+
 g) Figure legends:
 
 •       Fig. 4: please amend the spelling of ‘Tailand’ in the top panel of the figure.
@@ -97,11 +99,15 @@ g) Figure legends:
 
 •       Fig. 5(b): please amend ‘in press’ to ‘2022’ in the last line of the legend.
 
+**Done.**
+
 h) Table legends:
 
 •       I notice that the tables are pasted into the main text file as graphics and, unfortunately it is not possible to typeset the tables from this format. Insert the two tables in editable form in the main text file or upload separate Excel files.
 
 •       Table 1: please add text to the table footnote to explain the meaning of ‘TrS’, as has been done for TrB, TeB, TeN and BoN.
+
+**Fixed.**
 
 •       Table 2: the references presented in the right-most column are given twice at the end of the table. Please remove one set of this duplicated information. The footnote also includes the text ‘** composite climatic stress variable integrating temperature, vapour pressure deficit, and relative humidity is higher in lower canopy’ however I cannot see ‘**’ in the table (my apologies if I have missed it). Please check.
 
