--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -89,7 +89,7 @@ Marielle N. Smith^6,7^ (ORCID: 0000-0003-2323-331X; Twitter: marielle_smith1)
 
 Tyeen C. Taylor^8^ (ORCID: 0000-0002-0926-098X)
 
-Lawren Sack^2^
+Lawren Sack^2^ (ORCID: 0000-0002-7009-7202; Twitter: lawrensack)
 
 Thomas N. Buckley^9^ (ORCID: 0000-0001-7610-7136; Twitter: TomBuckleyLab)
 
