--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -453,7 +453,7 @@
   journaltitle = {Frontiers in Plant Science},
   shortjournal = {Front. Plant Sci.},
   volume = {8},
-  pages = {6--10},
+  pages = {1--14},
   publisher = {{Frontiers}},
   issn = {1664-462X},
   doi = {10.3389/fpls.2017.00309},
@@ -1050,7 +1050,7 @@
   shortjournal = {Proc Natl Acad Sci USA},
   volume = {118},
   number = {21},
-  pages = {4--7},
+  pages = {1--12},
   issn = {0027-8424, 1091-6490},
   doi = {10.1073/pnas.2003169118},
   url = {http://www.pnas.org/lookup/doi/10.1073/pnas.2003169118},
@@ -1070,7 +1070,7 @@
   number = {21},
   eprint = {34001597},
   eprinttype = {pmid},
-  pages = {4--7},
+  pages = {1--12},
   publisher = {{National Academy of Sciences}},
   issn = {0027-8424, 1091-6490},
   doi = {10.1073/pnas.2003169118},
@@ -1813,7 +1813,7 @@
   shortjournal = {Front. For. Glob. Change},
   volume = {1},
   number = {11},
-  pages = {6--10},
+  pages = {1--17},
   publisher = {{Frontiers}},
   issn = {2624-893X},
   doi = {10.3389/ffgc.2018.00011},
@@ -2134,7 +2134,7 @@
   shortjournal = {Front. Plant Sci.},
   volume = {11},
   number = {735},
-  pages = {4--9},
+  pages = {1--11},
   publisher = {{Frontiers}},
   issn = {1664-462X},
   doi = {10.3389/fpls.2020.00735},
@@ -2223,7 +2223,7 @@
   author = {Christoffersen, Bradley O and Gloor, Manuel and Fauset, Sophie and Fyllas, Nikolaos M and Galbraith, David R and Baker, R and Kruijt, Bart and Rowland, Lucy and Fisher, Rosie A and Binks, Oliver J and Sevanto, Sanna and Xu, Chonggang and Jansen, Steven and Choat, Brendan and Mencuccini, Maurizio and McDowell, Nate G and Meir, Patrick},
   date = {2016},
   journaltitle = {Geosci. Model Dev.},
-  pages = {4241--4245},
+  pages = {4227--4255},
   langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/RNUYERLJ/Christoffersen et al. - 2016 - Linking hydraulic traits to tropical forest functi.pdf}
 }
@@ -3139,7 +3139,7 @@
   journaltitle = {Journal of Geophysical Research: Biogeosciences},
   volume = {113},
   number = {G1},
-  pages = {5--12},
+  pages = {1--12},
   issn = {2156-2202},
   doi = {10.1029/2007JG000632},
   url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2007JG000632},
@@ -4140,7 +4140,7 @@
   journaltitle = {Oecologia},
   shortjournal = {Oecologia},
   volume = {197},
-  pages = {5--11},
+  pages = {13--24},
   issn = {0029-8549, 1432-1939},
   doi = {10.1007/s00442-021-04924-9},
   url = {https://link.springer.com/10.1007/s00442-021-04924-9},
@@ -4158,7 +4158,7 @@
   journaltitle = {Oecologia},
   shortjournal = {Oecologia},
   volume = {197},
-  pages = {5--11},
+  pages = {13--24},
   issn = {1432-1939},
   doi = {10.1007/s00442-021-04924-9},
   url = {https://doi.org/10.1007/s00442-021-04924-9},
@@ -4176,7 +4176,7 @@
   journaltitle = {Oecologia},
   shortjournal = {Oecologia},
   volume = {197},
-  pages = {5--11},
+  pages = {13--24},
   issn = {1432-1939},
   doi = {10.1007/s00442-021-04924-9},
   url = {https://doi.org/10.1007/s00442-021-04924-9},
@@ -6906,7 +6906,7 @@
   journaltitle = {Global Biogeochemical Cycles},
   volume = {19},
   number = {1},
-  pages = {5--25},
+  pages = {1--25},
   issn = {1944-9224},
   doi = {10.1029/2003GB002199},
   url = {http://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2003GB002199},
@@ -6926,7 +6926,7 @@
   journaltitle = {Global Biogeochemical Cycles},
   volume = {19},
   number = {1},
-  pages = {5--25},
+  pages = {1--25},
   issn = {1944-9224},
   doi = {10.1029/2003GB002199},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/2003GB002199},
@@ -9065,8 +9065,7 @@
   journaltitle = {Oecologia},
   shortjournal = {Oecologia},
   volume = {197},
-  number = {885–902},
-  pages = {895--897},
+  pages = {885--902},
   issn = {1432-1939},
   doi = {10.1007/s00442-020-04813-7},
   url = {https://doi.org/10.1007/s00442-020-04813-7},
@@ -9267,7 +9266,7 @@
   journaltitle = {AoB PLANTS},
   volume = {11},
   number = {6},
-  pages = {3--8},
+  pages = {1--8},
   doi = {10.1093/aobpla/plz054},
   url = {http://academic.oup.com/aobpla/article/11/6/plz054/5666155},
   urldate = {2020-06-12},
@@ -9975,7 +9974,7 @@
   journaltitle = {New Phytologist},
   volume = {205},
   number = {3},
-  pages = {982--989},
+  pages = {973--993},
   issn = {1469-8137},
   doi = {10.1111/nph.13096},
   url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.13096},
@@ -12296,7 +12295,8 @@
   journaltitle = {Global change biology},
   shortjournal = {Global change biology},
   volume = {20},
-  pages = {5--9},
+  number = {2},
+  pages = {495--503},
   doi = {10.1111/gcb.12439},
   abstract = {Extreme weather events, such as unusually hot or dry conditions, can cause death by exceeding physiological limits, and so cause loss of population. Survival will depend on whether or not susceptible organisms can find refuges that buffer extreme conditions. Microhabitats offer different microclimates to those found within the wider ecosystem, but do these microhabitats effectively buffer extreme climate events relative to the physiological requirements of the animals that frequent them? We collected temperature data from four common microhabitats (soil, tree holes, epiphytes and vegetation) located from the ground to canopy in primary rainforests in the Philippines. Ambient temperatures were monitored from outside of each microhabitat and from the upper forest canopy, which represent our macrohabitat controls. We measured the critical thermal maxima (CTmax ) of frog and lizard species, which are thermally sensitive and inhabit our microhabitats. Microhabitats reduced mean temperature by 1-2°C and reduced the duration of extreme temperature exposure by 14 to 31 times. Microhabitat temperatures were below the CTmax of inhabitant frogs and lizards, whereas macrohabitats consistently contained lethal temperatures. Microhabitat temperatures increased by 0.11 to 0.66°C for every 1°C increase in macrohabitat temperature, and this non-uniformity in temperature change influenced our forecasts of vulnerability for animal communities under climate change. Assuming uniform increases of 6°C, microhabitats decreased the vulnerability of communities by up to 32-fold, whereas under non-uniform increases of 0.66 to 3.96°C, microhabitats decreased the vulnerability of communities by up to 108-fold. Microhabitats have extraordinary potential to buffer climate and likely reduce mortality during extreme climate events. These results suggest that predicted changes in distribution due to mortality and habitat shifts that are derived from macroclimatic samples and that assume uniform changes in microclimates relative to macroclimates may be overly pessimistic. Nevertheless, even non-uniform temperature increases within buffered microhabitats would still threaten frogs and lizards. This article is protected by copyright. All rights reserved.}
 }
