--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5281,7 +5281,8 @@
   date = {2022},
   journaltitle = {Global Change Biology},
   volume = {28},
-  number = {11},
+  number = {7},
+  pages = {2442--2460},
   issn = {1365-2486},
   doi = {10.1111/gcb.16038},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.16038},
