--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1682,7 +1682,7 @@
   journaltitle = {New Phytologist},
   volume = {174},
   number = {626–636},
-  pages = {1--11},
+  pages = {626--636},
   doi = {10.1111/j.1469-8137.2007.02017.x},
   url = {https://pubmed.ncbi.nlm.nih.gov/17447917/},
   abstract = {Predicting the limits to tree height using statistical},
@@ -5209,8 +5209,7 @@
   author = {Harris, Nancy L. and Medina, Ernesto},
   date = {2013},
   journaltitle = {Ecological Bulletins},
-  volume = {169--179},
-  number = {54},
+  volume = {54},
   eprint = {26796812},
   eprinttype = {jstor},
   pages = {169--180},
