Added updated SI document in the new submission folder

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5462,6 +5462,7 @@
   publisher = {{National Ecological Observatory Network (NEON)}},
   doi = {10.48443/0TYT-KY71},
   url = {https://data.neonscience.org/data-products/DP1.00002.001/RELEASE-2022},
+  urldate = {2022-09-01},
   langid = {english},
   keywords = {air temperature,met station,meteolorogy,platinum resistance thermometers (PRT),profile,single aspirated air temperature (SAAT),tower}
 }
@@ -5485,6 +5486,7 @@
   publisher = {{National Ecological Observatory Network (NEON)}},
   doi = {10.48443/7RS6-FF56},
   url = {https://data.neonscience.org/data-products/DP1.00005.001/RELEASE-2022},
+  urldate = {2022-09-01},
   langid = {english},
   keywords = {biological temperature,canopy,foliar,ground,infrared (IR),leaf,litter,soil,surface,temperature}
 }
@@ -5496,6 +5498,7 @@
   publisher = {{National Ecological Observatory Network (NEON)}},
   doi = {10.48443/7RS6-FF56},
   url = {https://data.neonscience.org/data-products/DP1.00005.001/RELEASE-2022},
+  urldate = {2022-09-01},
   langid = {english},
   keywords = {biological temperature,canopy,foliar,ground,infrared (IR),leaf,litter,soil,surface,temperature}
 }
@@ -5507,6 +5510,7 @@
   publisher = {{National Ecological Observatory Network (NEON)}},
   doi = {10.48443/8A01-0677},
   url = {https://data.neonscience.org/data-products/DP1.00024.001/RELEASE-2022},
+  urldate = {2022-09-01},
   langid = {english},
   keywords = {meteorological station,photosynthetic photon flux density (PPFD),photosynthetically active radiation (PAR),solar radiation,tower,tower profile}
 }
@@ -5518,6 +5522,7 @@
   publisher = {{National Ecological Observatory Network (NEON)}},
   doi = {10.48443/W9NF-K476},
   url = {https://data.neonscience.org/data-products/DP1.00098.001},
+  urldate = {2022-09-01},
   langid = {english},
   keywords = {air temperature,dew point,frost point,humidity,meteorological station,relative humidity,soil array,temperature,tower top,water content}
 }
