--- a/response-to-editorial-requests.Rmd
+++ b/response-to-editorial-requests.Rmd
@@ -165,7 +165,7 @@ Please address the following points.
 
 •       National Ecological Observatory Network (NEON) (2022b, 2022a, 2022c, 2022d, 2022e): please include URL and date accessed for these references, to aid the reader.
 
-*NIDHI*
+**Done.**
 
 
 •       Convert your final Supporting Information file provided as a Word file to PDF format. We recommend that you scan through the PDF to ensure that all is correct before uploading this file (this is the final file that will be published on Wiley Online Library).
