Adding R citation manually into SI along with URLs for NEON variables

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -11378,9 +11378,9 @@
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/qj.49711347507}
 }
 
-@article{rcoreteamCoreTeam20212021,
+@article{rCoreTeam20212021,
   title = {R {{Core Team}} (2021). {{R}}:  {{A}} Language and Environment for Statistical Computing. {{R Foundation}} for {{Statistical Computing}}, {{Vienna}}, {{Austria}}.},
-  author = {R Core Team},
+  author = {R, Core Team},
   date = {2021},
   url = {https://www.r-project.org/},
   urldate = {2022-09-01}
