--- a/response-to-editorial-requests.Rmd
+++ b/response-to-editorial-requests.Rmd
@@ -149,11 +149,11 @@ Please address the following points.
 
 •       Methods S1: please insert to the references section the full reference for the R Core Team citation given in Methods S1 (page 4).
 
-*NIDHI*
+**Done.**
 
 •       Please add the full refence for this citation to the refence list at the end of the file.
 
-*NIDHI*
+**Done.**
 
 •       Fig. S1: the figure includes panels (a)–(e). Please add a mention to each panel to the figure legend.
 
