Added Tables 1 & 2 as word docs into the folder

--- a/response-to-editorial-requests.Rmd
+++ b/response-to-editorial-requests.Rmd
@@ -171,7 +171,7 @@ Please address the following points.
 
 •       Convert your final Supporting Information file provided as a Word file to PDF format. We recommend that you scan through the PDF to ensure that all is correct before uploading this file (this is the final file that will be published on Wiley Online Library).
 
-*(LATER STEP)*
+**Done.**
 
 ## 4)      Permissions
 
