--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -170,7 +170,7 @@ Here, we review vertical gradients in the biophysical environment and plant form
 (5) tree and ecosystem ecology.
 We then consider the implications for understanding forest responses to global change and how they scale across space and time. 
 
-![**Figure `r fig_schematic`. Schematic summarizing typical vertical gradients in (1) biophysical environment, (2) leaf temperature (*T~leaf~*), (3) leaf traits, (4) leaf gas exchange, and (5) tree and ecosystem ecology within closed-canopy forests during daytime growing season conditions.** Arrows indicate direction of increase, with double-pointed arrows indicating that the direction of the trend is uncertain or inconsistent. Patterns tend to be weaker, or sometimes reversed, in more open forests, when canopy trees are seasonally deciduous, or at nighttime. Abbreviations are as follows: *T~air~*: air temperature, VPD: vapor pressure deficit;  *T~leaf~* - *T~air~*: leaf-to-air temperature difference; LMA: leaf mass per area; T sensitivity: temperature sensitivity; ET: evapotranspiration. *Isoprene emission has also been observed to peak in mid-canopy (Table `r table_leaf_traits`).](schematics/Schematic figure 1.png)
+![**Figure `r fig_schematic`. Schematic summarizing typical vertical gradients in (1) biophysical environment, (2) leaf temperature (*T~leaf~*), (3) leaf traits, (4) leaf gas exchange, and (5) tree and ecosystem ecology within closed-canopy forests during daytime growing season conditions.** Arrows indicate direction of increase, with double-pointed arrows indicating that the direction of the trend is uncertain or inconsistent. Patterns tend to be weaker, or sometimes reversed, in more open forests, when canopy trees are seasonally deciduous, or at nighttime. Abbreviations are as follows: *T~air~*: air temperature, VPD: vapor pressure deficit;  *T~leaf~* - *T~air~*: leaf-to-air temperature difference; LMA: leaf mass per area; T sensitivity: temperature sensitivity; ET: evapotranspiration. *Isoprene emission has also been observed to peak in mid-canopy (Table `r table_leaf_traits`).](figures/Schematic figure 1.png)
 
 
 # II. Review of vertical gradients
@@ -498,7 +498,7 @@ However, under well-watered conditions conducive to high *g~s~*, we do not neces
 Indeed, there are cases where tree-ring records show more negative or less positive *T~air~*-responses of understory trees compared to canopy dominants [@anderson-teixeiraJointEffectsClimate2022; @rollinsonClimateSensitivityUnderstory2020].
 Additional research is required to understand the mechanisms underlying these intriguing differences, and to disentangle size-related tree growth responses to hot-wet versus hot-dry conditions. 
 
-![**Figure `r fig_treerings`. Examples of tree-ring evidence for greater interannual temperature sensitivity of annual growth for large than for small trees.** Across three sites and species, trees with large diameter at breast height (DBH) had more negative growth responses to high maximum temperature (*T~max~*) or potential evapotranspiration (PET) than did small trees of the same species. Independent variables are the most influential temperature-related variable at the site (*T~max~* or PET over a seasonal window spanning from the noted beginning to end month, where "c" and "p" represent months in the current and previous calendar year, respectively). Colored lines represent responses  of trees at the maximum and minimum tails of the DBH distribution included in the analysis to the temperature variable in a model including a DBH - temperature interaction. Other model terms are held constant at their mean. Transparent ribbons indicate 95% confidence intervals. Redrawn from @anderson-teixeiraJointEffectsClimate2022.](tree_rings/tree_ring_figure.png)
+![**Figure `r fig_treerings`. Examples of tree-ring evidence for greater interannual temperature sensitivity of annual growth for large than for small trees.** Across three sites and species, trees with large diameter at breast height (DBH) had more negative growth responses to high maximum temperature (*T~max~*) or potential evapotranspiration (PET) than did small trees of the same species. Independent variables are the most influential temperature-related variable at the site (*T~max~* or PET over a seasonal window spanning from the noted beginning to end month, where "c" and "p" represent months in the current and previous calendar year, respectively). Colored lines represent responses  of trees at the maximum and minimum tails of the DBH distribution included in the analysis to the temperature variable in a model including a DBH - temperature interaction. Other model terms are held constant at their mean. Transparent ribbons indicate 95% confidence intervals. Redrawn from @anderson-teixeiraJointEffectsClimate2022.](figures/tree_ring_figure.png)
 
 
 ### 5.2. C and water flux
@@ -509,7 +509,7 @@ Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy tr
 In terms of C cycling, it has been estimated that the canopy strata contributes ≥64% of net daytime CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil, @missonPartitioningForestCarbon2007]. 
 Large trees also dominate woody aboveground net primary productivity (*ANPP~woody~*) and mortality (*M~woody~*), with trees ≥10cm DBH usually contributing > 85% of *ANPP~woody~* and *M~woody~* across 25 globally distributed forests [Fig. `r fig_ecosystem`b, @piponiotDistributionBiomassDynamics2022]. 
 
-![**Figure `r fig_ecosystem`. Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests.** Panel (a) is from @kunertRevisedHydrologicalModel2017; panel (b) presents averages for 14 tropical forests from @piponiotDistributionBiomassDynamics2022.](schematics/ecosystem vertical partitioning/ecosystem partitioning.png)
+![**Figure `r fig_ecosystem`. Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests.** Panel (a) is from @kunertRevisedHydrologicalModel2017; panel (b) presents averages for 14 tropical forests from @piponiotDistributionBiomassDynamics2022.](figures/ecosystem vertical partitioning/ecosystem partitioning.png)
 
 It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but probable responses can be inferred based on the patterns and mechanisms reviewed above.
 We expect that under conditions of moderate to high VPD, transpiration, GPP, and *ANPP~woody~* should all be more sensitive to high temperatures in the upper canopy than in the understory [@grossiordPlantResponsesRising2020; @nunesForestFragmentationImpacts2022]. 
@@ -605,7 +605,7 @@ Airborne, spaceborne and terrestrial laser scanning data yield detailed 3D recon
 These data can be combined with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based infrared cameras. 
 
 
-![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical forest structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table `r table_leaf_traits` or 2. Panel b shows drone lidar point cloud data colored with thermal data from a savanna woodland in Kruger National Park, South Africa illustrating vertical and horizontal variation in vegetation temperature. Image courtesy of the Harvard Animal-Landscape Observatory, Peter B. Boucher and Andrew B. Davies.](schematics/fig_remote_sensing.png)
+![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical forest structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table `r table_leaf_traits` or 2. Panel b shows drone lidar point cloud data colored with thermal data from a savanna woodland in Kruger National Park, South Africa illustrating vertical and horizontal variation in vegetation temperature. Image courtesy of the Harvard Animal-Landscape Observatory, Peter B. Boucher and Andrew B. Davies.](figures/fig_remote_sensing.png)
 
 Detailed structural information from lidar data can be used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013].
 Canopy shading can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other lidar-based analyses [e.g., @davisLiDARderivedTopographyForest2019].
