--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -640,7 +640,7 @@ MNS was supported by NSF DEB grant (no. 1950080) to Michigan State University.
 NV and KAT planned and designed the research, with contributions from all authors. NV reviewed the literature. NV, IM, EMO and MNS contributed data and analyses. MS, TCT, LS, TNB contributed to writing and revising of the manuscript.
 
 ## Data Availability
-No new data were created in this study. New analyses are based upon data available from the National Ecological Observatory Network (NEON; https://www.neonscience.org/). The R scripts used for new analyses are (*will be*) available via GitHub (https://github.com/EcoClimLab/vertical-thermal-review) and archived in Zenodo (DOI: [TBD]). 
+No new data were created in this study. New analyses are based upon data available from the National Ecological Observatory Network (NEON; https://www.neonscience.org/). The R scripts used for new analyses are available via GitHub (https://github.com/EcoClimLab/vertical-thermal-review) and archived in Zenodo (DOI: 10.5281/zenodo.7050582). 
 
 ## SI files
 
