--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1173,6 +1173,24 @@
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2435.14003}
 }
 
+@article{binLeafTraitExpression2022a,
+  title = {Leaf Trait Expression Varies with Tree Size and Ecological Strategy in a Subtropical Forest},
+  author = {Bin, Yue and Li, Yanpeng and Russo, Sabrina E. and Cao, Honglin and Ni, Yunlong and Ye, Wanhui and Lian, Juyu},
+  date = {2022},
+  journaltitle = {Functional Ecology},
+  volume = {36},
+  number = {4},
+  pages = {1010--1022},
+  issn = {1365-2435},
+  doi = {10.1111/1365-2435.14003},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/1365-2435.14003},
+  urldate = {2022-09-14},
+  abstract = {How the dramatic vertical environmental gradients in closed canopy forests shape intraspecific variation in the functional traits of tree species and their ecological strategies is not well understood. In an Asian subtropical forest, we tested the hypothesis that, because species’ maximum height and shade tolerance determine the lifetime environmental variation of a tree, they should be correlated with the magnitude of intraspecific variation in leaf traits and how strongly it depends on tree size. We collected data on three vertical environmental variables, tree size and four leaf traits of 3,880 trees of 24 species in a subtropical forest. Air temperature and relative humidity displayed linear, and insolation displayed nonlinear, variation with height above-ground. Intraspecific trait variation (ITV) varied significantly among species, for all but one understorey tree species, and also varied with tree size for at least one trait. Many trait-size relationships were nonlinear with inflection points near the height where insolation dramatically increased. While ITV did not correlate with species’ maximum height nor shade tolerance, the amount of ITV explained by size (SDTV) and the rate of change in trait expression with size did. Greater ITV is thought to be associated with greater environmental heterogeneity, and yet strong evidence supporting this has not always been found. Our findings shed new light on how trait plasticity is phenotypically integrated with tree species’ ecological strategy by pointing to the importance of accounting for tree size, since SDTV, rather than ITV, was associated with strategy variation in maximum height and shade tolerance. Our study improves understanding of tree size's effect on leaf trait expression, and implies that SDTV is not only a key mechanism promoting interspecific variation in tree stature, contributing to species coexistence via vertical niche partitioning, but is also likely to influence the effects of climate change on forests by constraining tree responses to vertical environmental gradients. A free Plain Language Summary can be found within the Supporting Information of this article.},
+  langid = {english},
+  keywords = {body size,leaf functional traits,ontogeny,phenotypic plasticity,vertical environmental variation},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2435.14003}
+}
+
 @online{BiodiversityMeetsAtmospherea,
   title = {Biodiversity {{Meets}} the {{Atmosphere}}: {{A Global View}} of {{Forest Canopies}} | {{Science}}},
   url = {https://science.sciencemag.org/content/301/5630/183.abstract},
